Update print statement from 'Hello' to 'Goodbye'نهاية

--- a/index.html
+++ b/index.html
@@ -48,6 +48,50 @@
             const [selectedEntry, setSelectedEntry] = useState(null);
 
             const dictionaryData = useMemo(() => ({
+
+                'دلمظ': 'الدِّلْمِظُ: النابُ الكَبيرة.',
+                'دغر': 'الدُّغْرُورُ من الرِّجال: العِرِّيض الفاحِشُ. ودَغَر الحَمَلُ لِشاتِكَ [يَدْغُر دُغُوراً]: إذا دَخَل بينَ رُفْغَيْها ورَضِعَهَا.',
+                'دع': 'داعْ داعْ: لغةٌ دُعْ، وداع داعٍ، ودُعْ دُعْ، للنَّعِيقِ بالبَهْم.',
+                'ده': 'يُقال: دُهْ دُهْ: إِذا أَشْلَى ناقَتَه باسمِها لتَجيءَ إلى وَلَدِها.',
+                'درج': 'المُدْرِجُ من الإِبل: الَّتِي تُعَجِّلُ النِّتاجَ.',
+                'درك': 'التَّدْرِيكُ: أَنْ تُعَلِّقَ الحَبْلَ في عُنُقِ [البَعيرِ، ثم تعقِدَه عُقْدَةً واحِدَة، ثم تَلْوِيه، ثم تَعْقِدَه في عُنُقِ] الآخرِ إِذا قرَنْنَه إِليه.',
+                'دعدع': 'التَّدَعْدُع: مِشْيَةُ الشَّيخِ الكَبِيرِ الَّذي لا يَسْتَقِيمُ في مِشْيَته. والدَّعْدَعُ من الأَرْضِ: الجَرْداءُ.',
+                'دبل': 'الدَّبِيل: أرض مُسْتويةٌ سَهْلَةٌ. والدَّبِيل: ما انْتَثَرَ من وَرَقِ الأَرْطَي.',
+                'دوم': 'داَمت الدَّلْوُ: امَتَلأَتْ، وأَدَمْتُها أَنا.',
+                'دلك': 'دَلَّكَها: غذاها.',
+                'دخل': 'الدَّخْلَةُ: التي تُعَسَّلُ فيها النَّحْلُ الوَحْشِيّ.',
+                'درب': 'الدُّرْبَةُ: سَنامُ الثَّورِ الهَجينِ.',
+                'دأْدأْ': 'دَأْدأْتُه: غَطَّيْتُه.',
+                'دقل': 'جاءَ بولَد دَقِلٍ، أي صَغِير قَصيرٍ، وقد أَدْقَلَ.',
+                'دبه': 'تَقُول للرَّجل إذا حَمِدْناه وَمدَهْناه: دَباهٍ دَباهٍ.',
+                'دوه': 'التَّدويهُ: أَنْ تَدْعَوَ الإِبِلَ فتَقُولَ: داهُ داهُ.',
+                'دره': 'دَرَه بَنُو فلانٍ على ماء بني فُلانٍ: إذا طَرَءُوا عليهم فُجاءةً، فجَاءُوهُم.',
+                'دغص': 'المُداغَصَةُ: الاسْتِعجالُ.',
+                'دعفس': 'الدِّعْفِسُ من الإِبل: التي تَنْتَظِرُ حتى تَشْربَ الإِبلُ، ثُم تَشْربُ سُؤْرَها.',
+                'دعرم': 'وهي الدِّعْرِمُ أَيضاً.',
+                'دجل': 'إِنَّه لدَجّالًةٌ إليهِم، أي: مُقْبِلٌ مُدْبِرٌ. والدُّجَالُ: ماءُ الحَديدِ، يُقال: دَجِّلْ سَيْفَكَ هذا، وقد سَقاه الدَّجَال.',
+                'دبي': 'التَّدْبِيةُ: الصَّنْعَةُ.',
+                'ديص': 'الدَّياصَةُ من النساءِ: الكَثِيرةُ الَّلحْمِ في قِصَر.',
+                'دفف': 'الدَّفافِينُ: خَشَب السَّفِينَة، الواحدُ دُفّان.',
+                'دور': 'المُدْوَرَةُ من الإِبلِ: التي يَدُورُ فيها الرّاعِي، ويَحْلُبُها. قال: إِنِّي كَفانِي ذُرَى الأَخْماسِ مُدوَرَةٌ ... كُومٌ تَعاوَرُ مُدّاً غَيْرَ مَحْتُومٍ.',
+                'دمم': 'الدِّمامُ من السَّحاب: الذي ليسَ فيه ماءٌ.',
+                'دعم': 'الدَّعامَةُ: الشَّرْطُ يُقال: بَيْننا وبينَ بَنِي فُلان دَعامَةٌ، لا يُغِيرُ بعضُنا على بَعْضِ.',
+                'دول': 'دالَ الثَّوبُ يَدُولُ: إذا بَلَىِ.',
+                'دبب': 'الدَّبوبُ: الغارُ البَعِيدُ القَعْرِ. والدَّبَّةُ الرَّمل: المُسْتَويَة.',
+                'دجن': 'داجِنَةٌ وَطْفاءُ كثيرةُ المَطَر.',
+                'دربس': 'تَدَرْبَسَ: تَقَدَّم.',
+                'دخشم': 'الدَّخْشَمُ: القَصِير، قالَ النَّظَّار: إِذا ثَنَتْ أَسْجَجَ غَيْرَ دَخْشَمِ ... وأَرْجَفَتْهُ رَجَفانَ الكِرْزمِ.',
+                'ودع': 'الدَّعَةُ: تِبْنُ الطَّهَفِ، وهو شَجَرٌ دَقِيقٌ.',
+                'دهمر': 'المُدَهْمَرةُ المُجْتَمِعَةُ المُكَتَّلة.',
+                'دنق': 'الدَّنَفَةُ: الشَّيْلَم.',
+                'ديم': 'الدِّيْمَةُ للمِعْزَى: يُحْفَرُ في الأَرضِ، ثم يُظَلَّلُ ليُدْفِئَ المِعْزَى في الشِّتاءِ.',
+                'ذلغ': 'الانذِلاغُ انْسِلاخُ ظَهْر البَعِير من الحِمْلِ.',
+                'ذنن': 'ما زال يَذِنٌّ في تلك الحاجَةِ حَتَّى أَنْجَحَها، وهو تَرَدُّدُهُ فيها، ذَنِيناً.',
+                'ذرى': 'ذَرِىَ به ذَرىً: فَرح به.',
+                'ذرب': 'الذَّرَبَيُّ: الدَّاهِيَةُ، كالذَّرَبَيّا.',
+                'ذنب': 'المُذانِبُ من الإِبلِ: الذي يكونُ في آخِر الإِبلِ. والمُذَنِّبُ: التي تَرَدَّدُ من الطَّلْق.',
+                'ذرط': 'الذَّرْطأةُ: أَكْلٌ قَبيحٌ، وقد ذَرْطَيْتَ [فُلاناً]: إذا قَبَّحْتَ أَكْلَه.',
+                'ذمم': 'الذِّمَّةُ: المَأْدُبَةُ مَأْدُبَةُ الطَّعامِ، أَو العُرْسِ. قال: وإِنِّي لتَأْتِي أَبْعَدَ القَوْمِ ذِمَّتِى ... إذا وَرَقُ الطَّلْحِ الطُّوِالِ تَحَسَّرَا.',
                 'رون': 'الرَّون: أَقْصَى المَشارَةِ.',
                 'ربع': 'الارْتِباعُ: العَدْوُ الشَّدِيد.',
                 'رفف': 'الرِّفافَةُ: الَّتِي تُجْعَلُ في أَسْفَلِ البَيْضَةِ.',
@@ -502,50 +546,7 @@
                 'شدد': 'الأُشُدُّ: لغةٌ في الأشُدّ.',
                 'ذمأَ': 'ذَمأَ عليه: شَقَّ عليه.',
                 'قرسق': 'الفِرْسِقُ: لغة في الفِرْسِك، وهو الخَوْخُ.',
-                'قبأَ': 'قَبَأْتُ الطَّعامَ: أَكَلْتُه.',
-                'دلمظ': 'الدِّلْمِظُ: النابُ الكَبيرة.',
-                'دغر': 'الدُّغْرُورُ من الرِّجال: العِرِّيض الفاحِشُ. ودَغَر الحَمَلُ لِشاتِكَ [يَدْغُر دُغُوراً]: إذا دَخَل بينَ رُفْغَيْها ورَضِعَهَا.',
-                'دع': 'داعْ داعْ: لغةٌ دُعْ، وداع داعٍ، ودُعْ دُعْ، للنَّعِيقِ بالبَهْم.',
-                'ده': 'يُقال: دُهْ دُهْ: إِذا أَشْلَى ناقَتَه باسمِها لتَجيءَ إلى وَلَدِها.',
-                'درج': 'المُدْرِجُ من الإِبل: الَّتِي تُعَجِّلُ النِّتاجَ.',
-                'درك': 'التَّدْرِيكُ: أَنْ تُعَلِّقَ الحَبْلَ في عُنُقِ [البَعيرِ، ثم تعقِدَه عُقْدَةً واحِدَة، ثم تَلْوِيه، ثم تَعْقِدَه في عُنُقِ] الآخرِ إِذا قرَنْنَه إِليه.',
-                'دعدع': 'التَّدَعْدُع: مِشْيَةُ الشَّيخِ الكَبِيرِ الَّذي لا يَسْتَقِيمُ في مِشْيَته. والدَّعْدَعُ من الأَرْضِ: الجَرْداءُ.',
-                'دبل': 'الدَّبِيل: أرض مُسْتويةٌ سَهْلَةٌ. والدَّبِيل: ما انْتَثَرَ من وَرَقِ الأَرْطَي.',
-                'دوم': 'داَمت الدَّلْوُ: امَتَلأَتْ، وأَدَمْتُها أَنا.',
-                'دلك': 'دَلَّكَها: غذاها.',
-                'دخل': 'الدَّخْلَةُ: التي تُعَسَّلُ فيها النَّحْلُ الوَحْشِيّ.',
-                'درب': 'الدُّرْبَةُ: سَنامُ الثَّورِ الهَجينِ.',
-                'دأْدأْ': 'دَأْدأْتُه: غَطَّيْتُه.',
-                'دقل': 'جاءَ بولَد دَقِلٍ، أي صَغِير قَصيرٍ، وقد أَدْقَلَ.',
-                'دبه': 'تَقُول للرَّجل إذا حَمِدْناه وَمدَهْناه: دَباهٍ دَباهٍ.',
-                'دوه': 'التَّدويهُ: أَنْ تَدْعَوَ الإِبِلَ فتَقُولَ: داهُ داهُ.',
-                'دره': 'دَرَه بَنُو فلانٍ على ماء بني فُلانٍ: إذا طَرَءُوا عليهم فُجاءةً، فجَاءُوهُم.',
-                'دغص': 'المُداغَصَةُ: الاسْتِعجالُ.',
-                'دعفس': 'الدِّعْفِسُ من الإِبل: التي تَنْتَظِرُ حتى تَشْربَ الإِبلُ، ثُم تَشْربُ سُؤْرَها.',
-                'دعرم': 'وهي الدِّعْرِمُ أَيضاً.',
-                'دجل': 'إِنَّه لدَجّالًةٌ إليهِم، أي: مُقْبِلٌ مُدْبِرٌ. والدُّجَالُ: ماءُ الحَديدِ، يُقال: دَجِّلْ سَيْفَكَ هذا، وقد سَقاه الدَّجَال.',
-                'دبي': 'التَّدْبِيةُ: الصَّنْعَةُ.',
-                'ديص': 'الدَّياصَةُ من النساءِ: الكَثِيرةُ الَّلحْمِ في قِصَر.',
-                'دفف': 'الدَّفافِينُ: خَشَب السَّفِينَة، الواحدُ دُفّان.',
-                'دور': 'المُدْوَرَةُ من الإِبلِ: التي يَدُورُ فيها الرّاعِي، ويَحْلُبُها. قال: إِنِّي كَفانِي ذُرَى الأَخْماسِ مُدوَرَةٌ ... كُومٌ تَعاوَرُ مُدّاً غَيْرَ مَحْتُومٍ.',
-                'دمم': 'الدِّمامُ من السَّحاب: الذي ليسَ فيه ماءٌ.',
-                'دعم': 'الدَّعامَةُ: الشَّرْطُ يُقال: بَيْننا وبينَ بَنِي فُلان دَعامَةٌ، لا يُغِيرُ بعضُنا على بَعْضِ.',
-                'دول': 'دالَ الثَّوبُ يَدُولُ: إذا بَلَىِ.',
-                'دبب': 'الدَّبوبُ: الغارُ البَعِيدُ القَعْرِ. والدَّبَّةُ الرَّمل: المُسْتَويَة.',
-                'دجن': 'داجِنَةٌ وَطْفاءُ كثيرةُ المَطَر.',
-                'دربس': 'تَدَرْبَسَ: تَقَدَّم.',
-                'دخشم': 'الدَّخْشَمُ: القَصِير، قالَ النَّظَّار: إِذا ثَنَتْ أَسْجَجَ غَيْرَ دَخْشَمِ ... وأَرْجَفَتْهُ رَجَفانَ الكِرْزمِ.',
-                'ودع': 'الدَّعَةُ: تِبْنُ الطَّهَفِ، وهو شَجَرٌ دَقِيقٌ.',
-                'دهمر': 'المُدَهْمَرةُ المُجْتَمِعَةُ المُكَتَّلة.',
-                'دنق': 'الدَّنَفَةُ: الشَّيْلَم.',
-                'ديم': 'الدِّيْمَةُ للمِعْزَى: يُحْفَرُ في الأَرضِ، ثم يُظَلَّلُ ليُدْفِئَ المِعْزَى في الشِّتاءِ.',
-                'ذلغ': 'الانذِلاغُ انْسِلاخُ ظَهْر البَعِير من الحِمْلِ.',
-                'ذنن': 'ما زال يَذِنٌّ في تلك الحاجَةِ حَتَّى أَنْجَحَها، وهو تَرَدُّدُهُ فيها، ذَنِيناً.',
-                'ذرى': 'ذَرِىَ به ذَرىً: فَرح به.',
-                'ذرب': 'الذَّرَبَيُّ: الدَّاهِيَةُ، كالذَّرَبَيّا.',
-                'ذنب': 'المُذانِبُ من الإِبلِ: الذي يكونُ في آخِر الإِبلِ. والمُذَنِّبُ: التي تَرَدَّدُ من الطَّلْق.',
-                'ذرط': 'الذَّرْطأةُ: أَكْلٌ قَبيحٌ، وقد ذَرْطَيْتَ [فُلاناً]: إذا قَبَّحْتَ أَكْلَه.',
-                'ذمم': 'الذِّمَّةُ: المَأْدُبَةُ مَأْدُبَةُ الطَّعامِ، أَو العُرْسِ. قال: وإِنِّي لتَأْتِي أَبْعَدَ القَوْمِ ذِمَّتِى ... إذا وَرَقُ الطَّلْحِ الطُّوِالِ تَحَسَّرَا.'
+                'قبأَ': 'قَبَأْتُ الطَّعامَ: أَكَلْتُه.'
                 
             }), []);
 
@@ -634,6 +635,11 @@
                                 </ul>
                             </div>
                         )}
+                        {/* --- بداية كود التذييل الجديد --- */}
+                        <footer className="mt-8 text-center text-amber-800 opacity-60 text-sm">
+                            <p>تم التطوير بواسطة زيد فراس محمود © {new Date().getFullYear()}</p>
+                        </footer>
+                        {/* --- نهاية كود التذييل الجديد --- */}
                     </div>
                 </div>
             );
@@ -643,6 +649,7 @@
     </script>
 </body>
 </html>
+
 
 
 
