--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@
                         )}
                         {/* --- بداية كود التذييل الجديد --- */}
                         <footer className="mt-8 text-center text-amber-800 opacity-60 text-sm">
-                            <p>تم التطوير بواسطة زيد فراس محمود © {new Date().getFullYear()}</p>
+                            <p>ABOFERAS © {new Date().getFullYear()}</p>
                         </footer>
                         {/* --- نهاية كود التذييل الجديد --- */}
                     </div>
@@ -649,6 +649,7 @@
     </script>
 </body>
 </html>
+
 
 
 
