--- a/index.html
+++ b/index.html
@@ -630,6 +630,7 @@
                                 <h3 className="text-xl font-bold text-amber-900 mb-4">كيفية الاستخدام</h3>
                                 <ul className="space-y-2 text-gray-700">
                                     <li>• اكتب الكلمة التي تريد البحث عنها في المربع أعلاه</li>
+                                   <li>• عندما تختار من الكلمات المطابقة ستجد المعنى في الاسفل</li>
                                     <li>•  -  {Object.keys(dictionaryData).length} Now</li>
                                     <li>• يمكنك البحث بجزء من الكلمة لرؤية جميع الكلمات المطابقة</li>
                                 </ul>
@@ -649,6 +650,7 @@
     </script>
 </body>
 </html>
+
 
 
 
