--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
                                     type="text"
                                     value={searchTerm}
                                     onChange={(e) => setSearchTerm(e.target.value)}
-                                    placeholder="ابحث عن كلمة (مثال: رون، رشو، رمك...)"
+                                    placeholder="ابحث عن كلمة (مثال: رتب، عشم، رمك...)"
                                     className="w-full pr-12 pl-4 py-3 border-2 border-amber-200 rounded-lg focus:border-amber-500 focus:outline-none text-lg"
                                 />
                             </div>
@@ -650,6 +650,7 @@
     </script>
 </body>
 </html>
+
 
 
 
