Update print statement to say 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-G238CTNE9K"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-G238CTNE9K');
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>الشوارد</title>
@@ -650,6 +659,7 @@
     </script>
 </body>
 </html>
+
 
 
 
