Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -555,7 +555,170 @@
                 'شدد': 'الأُشُدُّ: لغةٌ في الأشُدّ.',
                 'ذمأَ': 'ذَمأَ عليه: شَقَّ عليه.',
                 'قرسق': 'الفِرْسِقُ: لغة في الفِرْسِك، وهو الخَوْخُ.',
-                'قبأَ': 'قَبَأْتُ الطَّعامَ: أَكَلْتُه.'
+                'قبأَ': 'قَبَأْتُ الطَّعامَ: أَكَلْتُه.',
+                'دجن': 'داجِنَةٌ وَطْفاءُ كثيرةُ المَطَر.',
+    'رقص': 'أَرْضٌ رقَّاصَةٌ: لا تُنْبتُ شَيئاً، أَصابَها المَطَر [وكَثُر العُشْبُ في غيرها].',
+    'رضرض': 'الرَّضْراضْ: القَطْرُ من المَطَر الصِّغارُ.',
+    'ردم': 'المِرْدامُ: القَلِيلُ الخَيرْ.',
+    'طرر': 'يطِرُّ شاربُه: لغة في يطُرُّ.',
+    'ألو': 'مَصدَر أَلا - أي قَصَّر - أَلْوٌ، وأُلُوٌّ.',
+    'رجو': 'الرَّجاة: الرجاءُ.',
+    'حذر': 'حَذارَكَ منه، وحَذَاركَ منه: بمعنى: حَذارِ مِنه.',
+    'عرس': 'أَعْرَسَه: لَزمَه.',
+    'جنب': 'أُجْنِبَ الرجلُ: مثل أَجْنَبَ وجَنْبَ.',
+    'قرف': 'أَقْرفتَ بي، وأَظْنَنْتَ بي، وأَتْهَمْتَ بي، أي: عَرَّضْتني للقِرْفَة والظِّنَّة والتُّهَمَة.',
+    'وطأَ': 'واطأْت في الشِّعر: مثل أَوْطَأْتُ.',
+    'وقر': 'وقرَتْ أَذُنُهُ: مثل وَقِرَت، وَوُقِرَتْ.',
+    'أَرم': 'ما بها أًرْم، وإِرْم: بمعنى أَرِمٍ وأَريم.',
+    'حشش': 'اسْتَحَشَّتْ يدُه، يَبِسَتْ، مثل حَشَّتْ وأَحَشَّتْ.',
+    'علم': 'أَعْلمْتُ شَفَتَه: مثل عَلَمْتُها.',
+    'خرم': 'أَخْرمتُ أَنْفه: مثل خرَمْتُه.',
+    'عسم': 'أَعْسَمْت يَدَه: أَيْبَسْتُها.',
+    'خيف': 'اختافُ: أَتَى خَيْفَ مِنىً، كأًخافَ، وأَخْيَفُ: مثل امْتَنَي: إِذا أَتَىَ مِنىً.',
+    'سوذق': 'السُّوْذَق، والسوْذنِيقُ: لغتان في السَّوْذَقِ والسَّوْذَنِيق.',
+    'ضرح': 'المَضْرحُ: المَضْرَحِيُّ، كالقَطامِ للقَطامِيِّ.',
+    'سيس': 'سِيسَ الطَّعامُ: لغةُ في ساسَ، وأَساسَ، وسَوَّسَ.',
+    'ذيت': 'كان من الأَمر ذَيْتَِ وذَيْتِ، وذَيَّةَ وذَيَّةَ، وذَيّاءَ وذَيّاءَ: لغاتٌ في ذَيْتَ وذَيْتَ.',
+    'مطل': 'الامتِطالُ: الانتِطالُ.',
+    'حبو': 'حُبيُّ السَّحاب: لغةٌ في حَبِيِّه.',
+    'قرر': 'اقْتَرَرْتُ حَدِيثَ القَوْمِ: تَبَحَّثْتُ عنه.',
+    'بنق': 'بَنَّقَ بالمَكانِ: أقامَ به.',
+    'مذ - ومنذ': 'أَهْلُ العالِيَة، يقولون: "ما لَقِيتُه مُنْذَ الَيْومِ"، وأًهلُ نَجْدٍ يَقُولون: "مُذَ اليَوْمِ".',
+    'سي': 'لاسِيَّةَ فلانٌ، أَي: لاسِيَّما فَلانٌ.',
+    'شتم': 'المَشْتُمَةُ: المَشْتَمَةُ.',
+    'جذع': 'جمعُ الجَذَع: جُذُعٌ، وأَجْذاعٌ، وجِذْعان، مثل جِذاعٍ وجَذْعان.',
+    'قفر': 'خُبْرٌ قَفْرٌ، أي: قَفارٌ.',
+    'هشش': 'خبْرٌ هَشاش أي: هَشٌّ.',
+    'حقر': 'الحُقارة، الحِقَارة: الحَقَارة.',
+    'شعر': 'مصدرُ شَعرْت بالشَّيء شِعْرَةٌ وشَعْرَةٌ وشُعُورٌ، كالشِّعْرِ والشِّعرى، والمَشْعُورِ، والمَشْعَورةِ.',
+    'جدد': 'رَجُلٌ جُدٌّ، أي: ذُوجَدٍّ، مثلُ جَدِيدِ.',
+    'مكر': 'مَكَرْتُه، أي مَكْرتُ به.',
+    'أَمق': 'أَمْقُ العَيْنِ: مَأْقُها.',
+    'دمل': 'ادَّمَلَ من مَرَضِه، أي انْدَمَلَ.',
+    'حلل': 'التَّحْليلِ: الإِحْلِيلُ.',
+    'مقع': 'هو شَرابٌ بأَمْقُعٍ، مثلُ بأَنْفُعٍ.',
+    'برو': 'البِروُنَ: جمعُ بُرَةٍ، لغةٌ في البُرِينَ.',
+    'أجج': 'تَأَجَّ علينا هذا البَيْتُ، وهذا اليومُ، أي اشْتَدَّ حَرُّهما، كتأَجَّجَ.',
+    'رفل': 'يرْفِلُ في ثَوْبِه: لغة في يَرْفلُ.',
+    'ربع، سبع، تسع': 'رَبَعْتُ القومَ، وسَبَعْتُهم، وتسًعْتُهم - بالمَعْنيين - أَرْبُعُهُم، وأَربِعُهُم وأَسْبُعُهم، وأَسْبِعُهم وأَتْسُعُهُم وأَتْسِعُهُم: لغاتٌ في أَرْبَعُهم وأَسْبَعُهُم، وأَتْسَعُهم.',
+    'أبو': 'الأَبْوُ: الأَبُوَّةُ.',
+    'أهل': 'هم أَهْلُ أَهْلَة وإِهْلَة، أي: هم أَهْل الخاصَّة.',
+    'جرر': 'يَجَرُّ: لغةٌ في يَجُرُّ الإِزار.',
+    'ثجم': 'ثَجَمَتْنا السّماءُ: دامَ مَطَرُها.',
+    'لأَم': 'الُّلؤْمانُ: اللِّثام.',
+    'ومأَ': 'أَوْمَأَه: أَي أَوْمَأَ إليه.',
+    'ندم': 'النَّدِيمَهُ: النَّدِيمُ.',
+    'بأَن': 'تَبَاَّنْتُ الطَّريقَ، والأَثَرَ: مثل تأَبَّنْتُهما.',
+    'برأَ': 'التِّبْرِئَة، والإِبْرِئَة بالهمز فيهما: لغتان في تَرْكِ الهمز.',
+    'ظلع': 'الظُّلاعُ: الظَّلَعُ.',
+    'شسع': 'شِسِعُ النُّعْل: لغة في شِسْعِها.',
+    'وتر': 'وتَرْتُ الصّلاة، ووتَّرْتُها: مثلُ أَوْتَرْتُها.',
+    'فرغ': 'فَرَغَ يَفْرَغُ: لغة في فَرَغَ يَفْرُغ، وفَرِغَ يَفْرَغُ.',
+    'فيض': 'امرأَةٌ مُفاضَةٌ، وأَفاضَها، أي أَفْضاهَا.',
+    'قاعدة جمع فعيل': 'ما كانَ جَمْعَ فَعِيلٍ من المُضاعَفِ يُقالُ فيه: فُعُلٌ وفُعَلٌ، مثل: قَلِيلٍ وقُلُلٍ وقُلَلٍ.',
+    'أَجج': 'أَجَّ: لغةُ في وَجَّ.',
+    'لفو': 'أَلْفَيتُه كَريماً، وأُلْفِيتُه.',
+    'وعى - وكى - وقى': 'الإِعاءُ، والإِكاءُ، والإِقاءْ: لغاتٌ في الوِعاءِ، والوِكاءِ، والوِقاءِ.',
+    'صدر': 'صَدَرْتُه: أي أَصْدَرْتُهُ.',
+    'قفر': 'القَفُورَةُ: الأَرْضُ القَفْرَةُ.',
+    'حشم': 'حَشَّمْتُه: أَغْضَبْتُه، مثل: حَشَمْتُه، وأَحْشَمْتُه.',
+    'جسس': 'الجَسِيسُ: الجاسُوسُ.',
+    'يتم': 'يَتِمَ يَاتَمُ، مثل: يَيْتَمُ.',
+    'جوى': 'أَجْوَيْتُ القِدْرَ، وهَذَيْلٌ تَقولُ: أَجْيَيْتُها، أي عَلَّقْتُها.',
+    'سكت': 'إِنَّ في خَيْلِ بَنِي فلانٍ لُسكانَةً، من السُّكَيْتِ.',
+    'لبن': 'شاةٌ لَبِنَةٌ: أَي لَبِنَةٌ.',
+    'حمق': 'الحُمَقُ، والحُمَقَةُ: الأَحْمَق.',
+    'ترك - منع': 'تَراكَها، ومَناعَها - بفَتْح الكافِ والعَيْن -: لغتان في الكَسْر، وهذا في حال الإِضافَةِ، فإِذا نُزِعَت الإِضافةُ فليس إِلاَّ الكَسْر.',
+    'نسب': 'ينْسِبُ، من النِّسْبَةِ: لغةٌ في يَنْسُب.',
+    'عضل': 'العَضِلُ، والعَضِيلُ: العُضال.',
+    'حلأَ': 'أَحْلأَْتُ السَّوِيقَ: مثل حَلأَّْتُه.',
+    'سرق': 'السَّرْقَةُ: لغة في السَّرِقَةِ.',
+    'حير': 'الحُيارَى: لغة في الحَيَارَى.',
+    'بطن': 'أًبطَنْتُ الثوبَ: مثل بَطَّنْتُه.',
+    'سقب': 'يُقال في جمع سَقْبِ النّاقَةِ: سُقْبانٌ، وفي جمعِ سَقْبِ البَيْتِ - وهو عَمُودُه - سِقْبانٌ.',
+    'جدي': 'يُجمْعَ الجَدْيُ جِدْياناً.',
+    'ضرب': 'رَجُلٌ ضَرِبٌ: شَدِيد الضَّرْبِ.',
+    'وعى': 'وَعَى فُلانٌ بنِى فُلان يَعِيهم، أي أغارَ عليهم، فسَرَقَهُم.',
+    'قنو': 'القَلِيسُ: غَثيانُ النَّفْسِ.',
+    'خدم': 'الخِدَمَةُ: السَّيْرُ كالخَدَمَةِ.',
+    'هرر - برر': 'قالَ رَجُلٌ من بنِي يَرْبُوع - في قولهم: "لا يَعْرِفُ هِرّاً من بِرٍّ": هو من قَولِهم أَبْرَرْتُ شائِي، أي أَصْدَرْتُها، وهَرَرْتُ بها، أي أَوْرَدْتُها.',
+    'الجزم بلو': 'أَجْرَوا لَوْ مُجرَى لَمْ فجَزَمُوا بهِ، فقالوا: لَو تَرَ.',
+    'إضافة العدد إلى المعدود': 'يُقالُ: كلْ لَهُ اثْنَىْ قَعْبهِ، وثَلاثَةَ قَعْبِهِ، واَرَبعةَ مُدِّهِ، وكذلك إلى العَشَرَةِ، تُضِيفُ العَددَ إلى المَعْدودِ.',
+    'علل': 'العلِّيُّ: العِلّةُ.',
+    'فرق': 'فَرَسٌ فَرُوقٌ، أي أَفْرَقُ.',
+    'خرج': 'إنه لَكَثيرُ خَوارجِ المال، وهي: الفَرَس الأُنْثَى، والأَمَةُ، والأَتانُ.',
+    'ربع': 'أَرْبَعَ الوِرْدُ: أَسْرَع الكَرَّ، وأَرْبَعَ ماءُ هذه الرَّكِيَّةِ: أي كَثُرَ.',
+    'ذرو - ى': 'ذَرَا فُوه يَذْرُو، وذَرِى يَذْرَى، وذَرَأَ يَذْرَأُ، أي: سَقَطَ.',
+    'قصب': 'القُصْبُ: الظَّهْر.',
+    'قنف': 'قَنَفَ القاعُ قَنْفاً: تَشَقَّق طِينُه، ويَبِسَ.',
+    'رتأَ': 'رَتَأَ في مِشْيَتهِ: تَثاقَلَ كِبْراً، أَو خُلُقاً.',
+    'سمم': 'سَمُّ الحاجَةِ: وَجهْهُا.',
+    'توق': 'التِّوَقَةُ: التَّوانِي. هكذا وَجَدْتُه مُحَقَّقاً في نُسُخَةٍ قُرئت على ابن دُرَيْد وعليها خَطُّه.',
+    'ضنا': 'الضُّناءَةُ، وقيل: الضُّنْأَة: الضّارُورةُ بالإِنْسانِ.',
+    'ندد': 'ليسَ لكَ فيه نادٌّ، أي رِزْق.',
+    'تلو': 'إِبِلُ فُلان مَتال، يَعْنُون أَنَّها لم يُنْتَجْ حتى صافَتْ.',
+    'رخم': 'أَرْخَمْتُ أَنا الدَّجاجَةَ على بَيْضِها: أَحْضَنْتُها إِيّاه.',
+    'قلص': 'قَلَصَنا البَرْدُ، يَقْلِصُنا أَي حَرَّكَنا.',
+    'كرك': 'أَكْرَكتِ الدَّجاجَةُ وهي كُرُكَّة.',
+    'كرب': 'أَكْرَب الرَّجُلُ: إذا طَلَب التَّمْرَ في كَرب النَّخْل.',
+    'قصل': 'أَقْصَلْتُ الدابَّةَ، مثل: قَصَلْتُها، من القَصِيلِ.',
+    'أَوح': 'تَقُولُ للذي يَكْرَهُ الشيءَ: آخِ لهذا، وبَعْضُهم يَقُولُ: آحَ.',
+    'صيف': 'المِصْيافُ: الذي لا يَتَزوجُ حتى يَشْمَطَ.',
+    'ختم': 'تَخَتَّمَ بأَمْرِه: كَتَمَهُ.',
+    'قدم': 'قَدِمْتُ البَصْرةَ قِدْماناً، أَي قُدُوماً.',
+    'خنفس': 'الخُنْفُسَةُ: لغة في الخُنْفَسَةِ.',
+    'عود': 'العَوادَةُ: العَوْدَة.',
+    'صغر - حقر': 'هذا أمر صُغْرانٌ حُقْرانٌ: أي صَغِيرٌ حَقِيرٌ.',
+    'كرع': 'كَرَعُ الدابَّةِ: قَوائِمُها.',
+    'ثلث - نصف': 'إناءٌ ثَلْثانُ: إلى الثُّلُثِ، كالنَّصْفان: إلى النِّصْفِ.',
+    'حلب': 'أَحْلَبَت الشاءُ، واستَحْلَبَتْ، وهو أَنْ تَسْمَنَ فتَسْتَحِقَّ الحَلْبَ.',
+    'بدد': 'البَدَد: الحاجَةُ.',
+    'حوص': 'حُوضُ الأَمر: حَوْصُه، ويقال أيضاً: لم طَعَنْتَ في حُوصى أى أَمرٍ لستَ منه في شيء؟: للذِي يَتكَلَّمُ فيما لا يَعْنِيه.',
+    'فلم': 'افْتَلَم أَنْفَه: جَدَعَه.',
+    'جلل': 'المَجَلَّةُ: الفِقْهُ والعِلْمُ.',
+    'قمق': 'تَقَمَّقَ: اشْتَكَى.',
+    'خنن': 'خَنَنْتُ القوُمَ: وَطِئْتُ مَخَنَّتَهم، أي حَريمَهُم.',
+    'ثوى': 'ثَوَى: ماتَ.',
+    'يرر': 'هذا الشَّرُّ واليَرُّ، إِتْباعٌ.',
+    'تبع': 'هذا رَجُلٌ تٌبِعٌ للكَلامِ، وهو الذي يُتْتِعُ بعضَ كلامِه بَعْضاً.',
+    'رحل': 'يُقال: رَحْلَكَ عَنَّا يا فُلانُ، أي ارْتَحِلْ.',
+    'عسل': 'قد عَلِمَ فُلان عَسَلَةَ بني فُلانٍ، يعني عِلْمَ جَماعَتِهم وأَمْرِهم.',
+    'سرر': 'سُرَرُ الوَجْهَِ، وسُرُّ الوَجْه: مِثْلُ سِرارِه.',
+    'سقع': 'أَصابَ بنِي فُلانِ ساقُوعٌ من شَرٍّ.',
+    'شرب': 'يقال: إِني لأَمْكُثُ اليَوْمَيْن ما أَشرَبُهما ماءَ، أَي ما أَشْرَبُ فِيهما ماءً.',
+    'طلف': 'أَي بغيرِ حَقٍّ، كما يُقال: ظَلِيفاً.',
+    'حور': 'الحِوارُ: الحُوارُ، ويقال: حِوارَةٌ وحُوارَةٌ، كما يُقال: فَصِيلٌ وفَصِيَلةٌ.',
+    'صبب': 'صَبيبُ السَّيف: طَرَفُه، مثلُ ضَبِيبهِ.',
+    'طفر': 'اطَّفَرَ الصَّقرُ الخَرَبَ: أَخَذَ بَرأْسِه.',
+    'جِعر': 'التَّجْعِيرُ: أَنْ يَسْتَخرجَ ما في بَطْنِ الضَّبُعِ من أدُبُرِها.',
+    'سته': 'رجلٌ سَتِهٌ: إِذا كانَ يَأْتِي النِّساءَ في أَسْتاهِهنَّ، ويُحِبُّ ذلك، وكذلك رَجُلٌ سُتْهَمْ.',
+    'أَهل - سمن - زبد - عسل': 'أهَلْتُ السَّوِيقَ، من الإِهالَةِ، فهو مَأْهُولٌ، كسَمَنْتُه، وزَبَدْتُه، وعَسَلْتُه، فهو مُسْمُون، ومَزْبُودٌ، ومَعْسُولٌ.',
+    'ذرى': 'ذَرَّيْتُ القَوْمَ: جَعَلْتُهم في ذَرىً من الرِّيحِ.',
+    'ودس': 'وَدَّسَتِ الأَرضُ: مثل أَودَسَت.',
+    'فرق': 'أَفَرَقَت الناقَةُ: إذا رَجَع إِليها بعضُ لَبَنِها.',
+    'نقو': 'النَّقاوَةُ، والنَّقاءَةُ: لغتان في النَّقاوَة، والنُّقايَة، والنُّقاءِ.',
+    'حفن': '"عِنْدَ حُفَنْيَةَ الخَبَرُ اليَقِينُ" بالحاءِ المهملة.',
+    'نشأَ': 'نَشُؤْتُ: لغة نَشَأْتُ.',
+    'هنأَ': 'يُقال: لتَهنِئْكَ العافِيةُ، وليَهْنِئْكَ الفارِسِ، بالهمزِ وتخفيف الهَمْزِ، ولا تُحْذَف الياءُ، لأَن الياء بدلٌ من الهَمْز.',
+    'رود': 'يقال: رُوَيْد كَني، وللمؤنث رُوَيْدَكِني. وَرَيْدكُمانِي، ورُوَيْدَكُمونِي، ورُوَيْدَكُنَّنِي.',
+    'رأَى': 'الرِّئِيُّ من الجِنِّ: لُغةٌ في الرَّئِيِّ، وكذلك كُل فَعيِلٍ ثانِية أحدُ حُروفِ الحَلْقِ، نحو: رغيف، وشِعِير، وبعيِر، وسِعِيد.',
+    'يقال: "هو من أَجمل الرجال وأَحسنه"': 'يَقُولون: فلانٌ من أَجْمَلِ الرِّجالِ وأَحْسَنِه، يُريدُون وأَحْسَنِهم، ولا يُتَكَلَّمُ إِلا به، يَذْهَبُون به مَذْهَبَ وأَحْسَنِ مَنْ ثَمَّ، وفُلانَةُ من أَحسنِ النِّساءِ كُلِّهِنَّ وأَعْقَلِهِنَّ.',
+    'تخفيف فِعِل وفَعُل': 'تَمِيمُ تُخَفِّفُ كُلَّ اسمٍ على فِعِلٍ، وفَعُلٍ، يَقُولونَ: في إِقِطٍ وحَذُرٍ - أَقْطٌ وحَذْرٌ.',
+    'حبب': 'يُجْمَع الحَبُّ على حُبّانٍ، كسَمْنٍ وسُمْنانٍ، وتَمْرٍ وتُمْرانٍ ولَحْمٍ ولُحْمان.',
+    'رهق - مده': 'الرَّهِيقُ، لغة في الرَّحِيقِ، كالمَدْحِ والمَدْهِ.',
+    'صطب': 'المِصْطَبَة مِيمُها مَكْسُورة، لأَنَّها يُرْتَفَقُ بها، كالمِصْدَغَةِ، والمِكْنَسَةِ.',
+    'دحى': 'دَحْيَة، ولا يُقال دِحْيَة.',
+    'شغل': 'لا يُقالُ: اشْتَغَلْتُ.',
+    'رحى': 'تُجْمَعُ الرَّحَى رُحِيّاً ورِحِيّاً.',
+    'نوى': 'وتُجْمَع النَّوَى نُوِيّاً ونِوِيّاً.',
+    'شفتر': 'الشَّفَنْتَرَي: من المُشْفَتِرّ، وهو المُتَفَرِّقُ.',
+    'بغدن': 'بَغْدِينُ: لغةٌ في بَغْدادَ.',
+    'ذبح': 'الذّبَحَة - مثلُ التِّوَلَة -: وَجَعُ الحلْقِ، لُغَةٌ في الذٌّبَحَةِ.',
+    'نفس': 'نُفِسَتِ المَرْأَةُ، أَي حاضَتْ، لغةٌ في نَفِسَتْ.',
+    'أَجن': 'الأَجّانَةُ: لغة في الإِجّانَةِ.',
+    'جنبذ': 'الجَنْبَذَةُ: القُبَّةُ، لغةٌ في الجُنْبُذَة.',
+    'إِصطخر': 'النِّسْبَةُ إِلى إِصْطَخْرَ إِصْطَخْرَزِيّ، على غيرِ قياسِ.',
+    'حشم': 'الحُشْمَة: لغةٌ في الحِشْمَةِ.'
                 
             }), []);
 
@@ -659,6 +822,7 @@
     </script>
 </body>
 </html>
+
 
 
 
